Fixing the z-index issue with the chips

--- a/SFH.IT.Hljodrit.Admin/Content/site.less
+++ b/SFH.IT.Hljodrit.Admin/Content/site.less
@@ -25,6 +25,10 @@ body {
     }
 }
 
+.overflow-y-off {
+    overflow-y: visible !important;
+}
+
 .no-border-radius {
     border-radius: 0;
 }
